make the search bar responsive with a modal at smaller sized screens, plus some spacing fixes

--- a/frontend/src/assets/styling/App.css
+++ b/frontend/src/assets/styling/App.css
@@ -154,6 +154,8 @@
   position: fixed;
   top: 0;
   border-bottom: 1px solid var(--input-box-color);
+  background-color: var(--background-color);
+  z-index: 9998;
 }
 
 #nav-dropdown {
