--- a/frontend/src/assets/styling/content.css
+++ b/frontend/src/assets/styling/content.css
@@ -1,8 +1,3 @@
-.navbar-container {
-    background-color: var(--background-color);
-    z-index: 9999;
-}
-
 .content-container {
     display: flex;
     flex-direction: row;
